# mcp-gitlab-deploy

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.traefik.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: GITHUB_CICD.md  MAINTENANCE_COMMAND_REFERENCE.md
examples/: codex.mcp.json
scripts/ci/: deploy_via_ssh.sh
src/gitlab_deploy_mcp/: server.py
